tests/paczka1/fuzzy1/77262422.err
Error in line 1: FRI S67 96,9
Error in line 2: S125 S125 48,4
Error in line 16: vyR3Dj A606 98,4
Error in line 18: FRI A859 49,9
Error in line 27: FRI S125 38,4
